tool/tests/snapshots/dotnet_target__result_types@MyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct: IDisposable
{
    private unsafe Raw.MyStruct* _inner;
    private readonly bool _isAllocatedByRust;

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// </remarks>
    /// <remarks>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe MyStruct(Raw.MyStruct* handle)
    {
        _inner = handle;
        _isAllocatedByRust = true;
    }

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from the raw struct.
    /// </summary>
    /// <remarks>
    /// This constructor allocates the raw struct on C# side.
    /// If a custom Drop implementation is implemented on Rust side, it will NOT run on destruction.
    /// </remarks>
    public MyStruct(Raw.MyStruct handle)
    {
        unsafe
        {
            _inner = (Raw.MyStruct*)Marshal.AllocHGlobal(sizeof(Raw.MyStruct));
            Buffer.MemoryCopy(&handle, _inner, sizeof(Raw.MyStruct), sizeof(Raw.MyStruct));
            _isAllocatedByRust = false;
        }
    }

    /// <exception cref="ByteException"></exception>
    /// <returns>
    /// A <c>MyStruct</c> allocated on C# side.
    /// If a custom Drop implementation is implemented on Rust side, it will NOT run on destruction.
    /// </returns>
    public static MyStruct New()
    {
        unsafe
        {
            Raw.FfiResultMyStructU8 result = Raw.MyStruct.New();
            if (!result.isOk)
            {
                throw new ByteException(result.Err);
            }
            Raw.MyStruct retVal = result.Ok;
            return new MyStruct(retVal);
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.MyStruct* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            if (_isAllocatedByRust)
            {
                Raw.MyStruct.Destroy(_inner);
            }
            else
            {
                Marshal.FreeHGlobal((IntPtr)_inner);
            }

            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~MyStruct()
    {
        Dispose();
    }
}

