tool/tests/snapshots/dotnet_target__setters_getters_properties@RawFfiResultVoidVoid.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using SomeOrg.SomeModule;
using We.Also.Need.This;
using OurOrg.OurRustLib.Diplomat;
#pragma warning restore 0105

namespace OurOrg.OurRustLib.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct FfiResultVoidVoid
{
    [MarshalAs(UnmanagedType.U1)]
    public bool isOk;
}

