tool/tests/snapshots/dotnet_target__simple_non_opaque_struct@MyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct
{
    private Raw.MyStruct _inner;

    public byte A
    {
        get
        {
            unsafe
            {
                return _inner.a;
            }
        }
        set
        {
            unsafe
            {
                _inner.a = value;
            }
        }
    }

    public byte B
    {
        get
        {
            unsafe
            {
                return _inner.b;
            }
        }
        set
        {
            unsafe
            {
                _inner.b = value;
            }
        }
    }

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from the raw representation.
    /// </summary>
    public unsafe MyStruct(Raw.MyStruct data)
    {
        _inner = data;
    }

    /// <returns>
    /// A <c>MyStruct</c> allocated on C# side.
    /// </returns>
    public static MyStruct New(byte a, byte b)
    {
        unsafe
        {
            Raw.MyStruct retVal = Raw.MyStruct.New(a, b);
            return new MyStruct(retVal);
        }
    }

    public byte GetA()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            byte retVal = Raw.MyStruct.GetA(_inner);
            return retVal;
        }
    }

    public void SetB(byte b)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            Raw.MyStruct.SetB(_inner, b);
        }
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.MyStruct AsFFI()
    {
        return _inner;
    }
}

